--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.51.4",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.0"
   },
   "devDependencies": {
