--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "dayjs": "^1.11.11",
