--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "cpf-cnpj-validator": "^1.0.3",
     "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
